--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "ncp": "^2.0.0",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.25.0",
     "rollup-plugin-delete": "^1.1.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript2": "^0.24.3",
+    "sass": "^1.89.2",
     "typescript": "3.7.5"
   },
   "peerDependencies": {
-    "react": "^16.10.2 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.10.2 || ^17.0.0 || ^18.0.0"
+    "react": "^16.10.2 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.10.2 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "files": [
     "build"
