--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^4.4.0",
     "typescript": "3.6.4"
   },
